// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeScriptInputModels 1`] = `
{
  "generated/models.ts": "// Code generated by wunderctl. DO NOT EDIT.

import type { GraphQLError } from "@wundergraph/sdk/client";

export interface db_NodeWhereInput {
	AND?: db_NodeWhereInput;
}

export interface PetInput {
	id: string;
	name?: string;
}

export type UnionInput =
	| {
			a?: UnionInputA;
	  }
	| {
			b?: UnionInputB;
	  };

export interface UnionInputA {
	a?: string;
}

export interface UnionInputB {
	b?: string;
}

export type JSONValue = string | number | boolean | JSONObject | Array<JSONValue>;

export type JSONObject = { [key: string]: JSONValue };

export const Planets = {
	mercury: "mercury",
	venus: "venus",
	earth: "earth",
} as const;

export type PlanetsValues = (typeof Planets)[keyof typeof Planets];

export interface ClosestPlanetsInput {
	where?: db_NodeWhereInput;
}

export interface CreatePetInput {
	petInput: PetInput;
}

export interface MutationWithUnionInputInput {
	input: UnionInput;
}
",
  "generated/ts-operation-errors.ts": "// Code generated by wunderctl. DO NOT EDIT.

import type { ClientOperationErrors, GraphQLError } from "@wundergraph/sdk/client";

export type OperationErrors = {};
",
}
`;

exports[`TypeScriptResponseModels 1`] = `
{
  "generated/models.ts": "// Code generated by wunderctl. DO NOT EDIT.

import type { GraphQLError } from "@wundergraph/sdk/client";

export interface db_NodeWhereInput {
	AND?: db_NodeWhereInput;
}

export interface PetInput {
	id: string;
	name?: string;
}

export type JSONValue = string | number | boolean | JSONObject | Array<JSONValue>;

export type JSONObject = { [key: string]: JSONValue };

export const Planets = {
	mercury: "mercury",
	venus: "venus",
	earth: "earth",
} as const;

export type PlanetsValues = (typeof Planets)[keyof typeof Planets];

export interface ClosestPlanetsResponse {
	data: ClosestPlanetsResponseData;
	errors?: GraphQLError[];
}

export interface MyReviewsResponse {
	data: MyReviewsResponseData;
	errors?: GraphQLError[];
}

export interface CreatePetResponse {
	data: CreatePetResponseData;
	errors?: GraphQLError[];
}

export interface NewPetsResponse {
	data: NewPetsResponseData;
	errors?: GraphQLError[];
}

export interface ClosestPlanetsResponseData {
	name?: PlanetsValues[];
}

export interface MyReviewsResponseData {
	me?: {
		name?: string;
		reviews?: {
			id: string;
			body?: string;
		}[];
	};
}

export interface CreatePetResponseData {
	postPets?: {
		name?: string;
	};
}

export interface NewPetsResponseData {
	newPets?: {
		name?: string;
	};
}
",
  "generated/ts-operation-errors.ts": "// Code generated by wunderctl. DO NOT EDIT.

import type { ClientOperationErrors, GraphQLError } from "@wundergraph/sdk/client";

export type OperationErrors = {};
",
}
`;
